--- a/paginas/quienes-somos.html
+++ b/paginas/quienes-somos.html
@@ -49,11 +49,11 @@
     <footer>
         <div>
             <ul class="footer__indice">
-                <li> <a href="../index.html">INICIO</a></li>
-                <li> <a href="../paginas/quienes-somos.html">QUIENES SOMOS</a></li>
-                <li> <a href="../paginas/galeria.html">GALERIA</a></li>
-                <li> <a href="../paginas/formato.html">FORMATO</a></li>
-                <li> <a href="../paginas/contacto.html">CONTACTO</a></li>
+                <li class="footer__item"> <a href="../index.html">INICIO</a></li>
+                <li class="footer__item"> <a href="../paginas/quienes-somos.html">QUIENES SOMOS</a></li>
+                <li class="footer__item"> <a href="../paginas/galeria.html">GALERIA</a></li>
+                <li class="footer__item"> <a href="../paginas/formato.html">FORMATO</a></li>
+                <li class="footer__item"> <a href="../paginas/contacto.html">CONTACTO</a></li>
             </ul>
         </div>
         <div class="footer__redes">
