--- a/index.html
+++ b/index.html
@@ -12,21 +12,37 @@
     <enlace href="https: //fonts.googleapis.com/css2? family= Tiro+Telugu & display=swap" rel="hoja de estilo">
 <!-- NOMBRE DE LA PAGINA -->
     <title> LIGA DE FUTBOL</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 <!-- ETIQUETA CSS -->
     <link rel="stylesheet" href="css/styles.css"> 
 </head>
 <body>
 <!-- encabezado de la pagina -->
     <header>
-        <nav class="header__nav"> <!-- barra de navegacion -->
-            <img class="header__logo" src="imagenes/favicon.ico"> <!-- logo -->
-            <ul class="header__lista">
-                <li class="header__item"> <a href="index.html">INICIO</a></li>
-                <li class="header__item"> <a href="paginas/quienes-somos.html">QUIENES SOMOS</a></li>
-                <li class="header__item"> <a href="paginas/galeria.html">GALERIA</a></li>
-                <li class="header__item"> <a href="paginas/formato.html">FORMATO</a></li>
-                <li class="header__item"> <a href="paginas/contacto.html">CONTACTO</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg header">
+            <div class="container-fluid ms-auto" >
+                <img class="header__logo" src="imagenes/favicon.ico">
+                <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mb- mb-lg-0 mx-auto">
+                <li class="nav-item">
+                    <a class="header__item a nav" href="#">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="header__item a " href="paginas/quienes-somos.html">Quienes Somos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="header__item a " href="paginas/galeria.html">Galeria</a>
+                </li>
+                <li class="nav-item">
+                    <a class="header__item a " href="paginas/formato.html">Formato</a>
+                </li>
+                <li class="nav-item">
+                    <a class="header__item a " href="paginas/contacto.html">Contacto</a>
+                </li>
         </nav>
 
     </header>
@@ -73,5 +89,7 @@
         </div>
         <span class="footer__derechos">LOS DERECHOS DE ESTE SITIO SON RESERVADOS </span>
     </footer>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
