--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -12,6 +12,8 @@
     <enlace href="https: //fonts.googleapis.com/css2? family= Tiro+Telugu & display=swap" rel="hoja de estilo">
 <!-- NOMBRE DE LA PAGINA -->
     <title> LIGA DE FUTBOL</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 <!-- ETIQUETA CSS -->
     <link rel="stylesheet" href="../css/styles.css"> 
 </head>
@@ -57,5 +59,7 @@
         </div>
         <span class="footer__derechos">LOS DERECHOS DE ESTE SITIO SON RESERVADOS </span>
     </footer>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
