agregando bootstrap y modificaciones

--- a/index.html
+++ b/index.html
@@ -21,27 +21,27 @@
 <!-- encabezado de la pagina -->
     <header>
         <nav class="navbar navbar-expand-lg header">
-            <div class="container-fluid ms-auto" >
-                <img class="header__logo" src="imagenes/favicon.ico">
-                <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <div class="container-fluid" >
+                <a href="index.html"><img class="header__logo" src="imagenes/Soccer-Ball-PNG-Pic-Background.png"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mb- mb-lg-0 mx-auto">
                 <li class="nav-item">
-                    <a class="header__item a nav" href="#">Inicio</a>
+                    <a class="header__item ala nav" href="#">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="header__item a " href="paginas/quienes-somos.html">Quienes Somos</a>
+                    <a class="header__item ala " href="paginas/quienes-somos.html">Quienes Somos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="header__item a " href="paginas/galeria.html">Galeria</a>
+                    <a class="header__item ala " href="paginas/galeria.html">Galeria</a>
                 </li>
                 <li class="nav-item">
-                    <a class="header__item a " href="paginas/formato.html">Formato</a>
+                    <a class="header__item ala " href="paginas/formato.html">Formato</a>
                 </li>
                 <li class="nav-item">
-                    <a class="header__item a " href="paginas/contacto.html">Contacto</a>
+                    <a class="header__item ala " href="paginas/contacto.html">Contacto</a>
                 </li>
         </nav>
 
