--- a/paginas/quienes-somos.html
+++ b/paginas/quienes-somos.html
@@ -20,15 +20,29 @@
 <body>
 <!-- encabezado de la pagina -->
     <header>
-        <nav class="header__nav"> <!-- barra de navegacion -->
-            <img class="header__logo" src="../imagenes/favicon.ico">
-            <ul class="header__lista">
-                <li class="header__item"> <a href="../index.html">INICIO</a></li>
-                <li class="header__item"> <a href="quienes-somos.html">QUIENES SOMOS</a></li>
-                <li class="header__item"> <a href="galeria.html">GALERIA</a></li>
-                <li class="header__item"> <a href="formato.html">FORMATO</a></li>
-                <li class="header__item"> <a href="contacto.html">CONTACTO</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg header">
+            <div class="container-fluid" >
+                <a href="../index.html"><img class="header__logo" src="../imagenes/Soccer-Ball-PNG-Pic-Background.png"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mb- mb-lg-0 mx-auto">
+                <li class="nav-item">
+                    <a class="header__item ala nav" href="../index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="header__item ala " href="../paginas/quienes-somos.html">Quienes Somos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="header__item ala " href="../paginas/galeria.html">Galeria</a>
+                </li>
+                <li class="nav-item">
+                    <a class="header__item ala " href="../paginas/formato.html">Formato</a>
+                </li>
+                <li class="nav-item">
+                    <a class="header__item ala " href="../paginas/contacto.html">Contacto</a>
+                </li>
         </nav>
     </header>
 <!-- cuerpo de la pagina -->
