--- a/index.html
+++ b/index.html
@@ -47,32 +47,125 @@
 
     </header>
 <!-- cuerpo de la pagina -->
-    <main class="container__inicio">
+    <main>
         <h1 class="main__titulo--inicio"> Torneo Nacional De Futbol Infantil</h1>
-            <section class="foto__portada">
-                <img class="imagen__foto--portada" src="imagenes/foto__portada.png">
-            </section>
-            <section class="galeria"> <!-- imagenes -->
-            <article>
-                <img class="galeria__img--futbol" src="imagenes/atletico.png" alt="imagen de atletico">
-                <img class="galeria__img--futbol" src="imagenes/cef18.png" alt="imagen cef 18">
-            </article>
-            <article class="lista__desordenada--dos">
-                <p> El torneo nacional infantil llego a su tercera edicion que se llevara a cabo a fines del año 2022. Es un torneo que dura 3 dias donde se alquila un predio para llevarse a cabo todos los partidos de manera en tal que todos los equipos puedan jugar.</p>
-                <h2> Este torneo te ofrece: </h2>
-                <ul class="lista__desordenada"> <!-- lista desordenada -->
-                    <li> ARBITROS PROFESIONALES</li>
-                    <li> PREMIOS </li>
-                    <li> AREA PROTEGIDA </li>
-                    <li> COBERTURA AUDIOVISUAL </li>
-                    <li> JUEGOS </li>
-                    <li> Y MAS</li>
-                </ul>
-            </article>
-            </section>
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            </div>
+            <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="imagenes/fondo.png" class="pelota__futbol" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="imagenes/atletico.png" class="pelota__futbol" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="imagenes/valladares-galeria.png" class="pelota__futbol" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="imagenes/quara.png" class="pelota__futbol" alt="...">
+            </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+            </div>
     </main>
 <!-- pie de pagina -->
-    <footer>
+    <footer
+    class="text-center text-lg-start text-white texto"
+    style="background-color: #1c2331"
+    >
+    <!-- Section: Social media -->
+    <!-- Section: Links  -->
+    <section class="">
+    <div class="container text-center text-md-start mt-5">
+    <!-- Grid row -->
+    <div class="row mt-3">
+    <!-- Grid column -->
+    <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+    <!-- Content -->
+    <h6 class="text-uppercase fw-bold">Company name</h6>
+    <hr
+        class="mb-4 mt-0 d-inline-block mx-auto"
+        style="width: 60px; background-color: #7c4dff; height: 2px"
+        />
+    <p>
+
+    </p>
+    </div>
+    <!-- Grid column -->
+
+    <!-- Grid column -->
+    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+    <!-- Links -->
+    <h6 class="text-uppercase fw-bold">Paginas</h6>
+    <hr
+        class="mb-4 mt-0 d-inline-block mx-auto"
+        style="width: 60px; background-color: #7c4dff; height: 2px"
+        />
+        <p>
+            <a href="index.html" class="text-white">Inicio</a>
+        </p>
+        <p>
+            <a href="paginas/quienes-somos.html" class="text-white">QUIENES Somos</a>
+        </p>
+        <p>
+            <a href="paginas/galeria.html" class="text-white">Galeria</a>
+        </p>
+        <p>
+            <a href="paginas/formato.html" class="text-white">Formato</a>
+        </p>
+        <p>
+            <a href="paginas/contacto.html" class="text-white">Contacto</a>
+        </p>
+    </div>
+    <!-- Grid column -->
+
+    <!-- Grid column -->
+    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+    <!-- Links -->
+    <h6 class="text-uppercase fw-bold">Contacto</h6>
+    <hr
+        class="mb-4 mt-0 d-inline-block mx-auto"
+        style="width: 60px; background-color: #7c4dff; height: 2px"
+        />
+        <p><i class="fas fa-home mr-3"></i> Yerba Buena, Tucuman, AR</p>
+        <p><i class="fas fa-home mr-3"></i> Escuelitafutbol@gmail.com</p>
+        <p><i class="fas fa-home mr-3"></i> + 01 234 567 88 </p>
+        <p><i class="fas fa-home mr-3"></i> + 01 234 567 99</p>
+    </div>
+    <!-- Grid column -->
+
+    <!-- Grid column -->
+    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+    <!-- Links -->
+    <h6 class="text-uppercase fw-bold">Contact</h6>
+    <hr
+        class="mb-4 mt-0 d-inline-block mx-auto"
+        style="width: 60px; background-color: #7c4dff; height: 2px"
+        />
+        <div class="footer__redes">
+            <img class="footer__logos" src="imagenes/facebook.png" alt="imagen-facebook">
+            <img class="footer__logos" src="imagenes/instagram.png" alt="imagen-instagram">
+            <img class="footer__logos" src="imagenes/gorjeo.png" alt="imagen-twitter">
+        </div>
+    <!-- Grid column -->
+    </div>
+    <!-- Grid row -->
+    </div>
+    </section>
+    </footer>
+<!--     <footer>
         <div>
             <ul class="footer__indice">
                 <li class="footer__item"> <a href="index.html">INICIO</a></li>
@@ -88,7 +181,7 @@
             <img class="footer__logos" src="imagenes/gorjeo.png" alt="imagen-twitter">
         </div>
         <span class="footer__derechos">LOS DERECHOS DE ESTE SITIO SON RESERVADOS </span>
-    </footer>
+    </footer> -->
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
