--- a/index.html
+++ b/index.html
@@ -82,42 +82,23 @@
     </main>
 <!-- pie de pagina -->
     <footer
-    class="text-center text-lg-start text-white texto"
+    class=" text-lg-center text-white texto pt-0"
     style="background-color: #1c2331"
     >
     <!-- Section: Social media -->
     <!-- Section: Links  -->
     <section class="">
-    <div class="container text-center text-md-start mt-5">
+    <div class="container text-center text-md-start">
     <!-- Grid row -->
-    <div class="row mt-3">
-    <!-- Grid column -->
-    <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-    <!-- Content -->
-    <h6 class="text-uppercase fw-bold">Company name</h6>
-    <hr
-        class="mb-4 mt-0 d-inline-block mx-auto"
-        style="width: 60px; background-color: #7c4dff; height: 2px"
-        />
-    <p>
-
-    </p>
-    </div>
-    <!-- Grid column -->
-
-    <!-- Grid column -->
-    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+    <div class="row d-flex justify-content-center">
+    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
     <!-- Links -->
     <h6 class="text-uppercase fw-bold">Paginas</h6>
-    <hr
-        class="mb-4 mt-0 d-inline-block mx-auto"
-        style="width: 60px; background-color: #7c4dff; height: 2px"
-        />
         <p>
             <a href="index.html" class="text-white">Inicio</a>
         </p>
         <p>
-            <a href="paginas/quienes-somos.html" class="text-white">QUIENES Somos</a>
+            <a href="paginas/quienes-somos.html" class="text-white">Quienes Somos</a>
         </p>
         <p>
             <a href="paginas/galeria.html" class="text-white">Galeria</a>
@@ -132,29 +113,18 @@
     <!-- Grid column -->
 
     <!-- Grid column -->
-    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+    <div class="col-md-2 col-md-4 col-xl-2 mx-auto mt-3">
     <!-- Links -->
     <h6 class="text-uppercase fw-bold">Contacto</h6>
-    <hr
-        class="mb-4 mt-0 d-inline-block mx-auto"
-        style="width: 60px; background-color: #7c4dff; height: 2px"
-        />
         <p><i class="fas fa-home mr-3"></i> Yerba Buena, Tucuman, AR</p>
-        <p><i class="fas fa-home mr-3"></i> Escuelitafutbol@gmail.com</p>
+        <p><i class="fas fa-home mr-3 pp"></i> Torneofutbol@gmail.com</p>
         <p><i class="fas fa-home mr-3"></i> + 01 234 567 88 </p>
         <p><i class="fas fa-home mr-3"></i> + 01 234 567 99</p>
     </div>
-    <!-- Grid column -->
-
-    <!-- Grid column -->
-    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
     <!-- Links -->
-    <h6 class="text-uppercase fw-bold">Contact</h6>
-    <hr
-        class="mb-4 mt-0 d-inline-block mx-auto"
-        style="width: 60px; background-color: #7c4dff; height: 2px"
-        />
-        <div class="footer__redes">
+    <h6 class="text-uppercase fw-bold">Redes</h6>
+        <div class="d-flex flex-column footer__indice">
             <img class="footer__logos" src="imagenes/facebook.png" alt="imagen-facebook">
             <img class="footer__logos" src="imagenes/instagram.png" alt="imagen-instagram">
             <img class="footer__logos" src="imagenes/gorjeo.png" alt="imagen-twitter">
