--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -47,7 +47,6 @@
     </header>
 <!-- cuerpo de la pagina -->
     <main >
-        
         <section class="formulario__uno">
             <article>
                 <div>
@@ -83,22 +82,59 @@
         </section>
     </main>
 <!-- pie de pagina -->
-    <footer>
-        <div>
-            <ul class="footer__indice">
-                <li class="footer__item"> <a href="../index.html">INICIO</a></li>
-                <li class="footer__item"> <a href="../paginas/quienes-somos.html">QUIENES SOMOS</a></li>
-                <li class="footer__item"> <a href="../paginas/galeria.html">GALERIA</a></li>
-                <li class="footer__item"> <a href="../paginas/formato.html">FORMATO</a></li>
-                <li class="footer__item"> <a href="../paginas/contacto.html">CONTACTO</a></li>
-            </ul>
-        </div>
-        <div class="footer__redes">
+    <footer
+    class=" text-lg-center text-white texto pt-0"
+    style="background-color: #1c2331"
+    >
+    <!-- Section: Social media -->
+    <!-- Section: Links  -->
+    <section class="">
+    <div class="container text-center text-md-start">
+    <!-- Grid row -->
+    <div class="row d-flex justify-content-center">
+    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+    <!-- Links -->
+    <h6 class="text-uppercase fw-bold">Paginas</h6>
+        <p>
+            <a href="../index.html" class="text-white">Inicio</a>
+        </p>
+        <p>
+            <a href="../paginas/quienes-somos.html" class="text-white">Quienes Somos</a>
+        </p>
+        <p>
+            <a href="../paginas/galeria.html" class="text-white">Galeria</a>
+        </p>
+        <p>
+            <a href="../paginas/formato.html" class="text-white">Formato</a>
+        </p>
+        <p>
+            <a href="../paginas/contacto.html" class="text-white">Contacto</a>
+        </p>
+    </div>
+    <!-- Grid column -->
+
+    <!-- Grid column -->
+    <div class="col-md-2 col-md-4 col-xl-2 mx-auto mt-3">
+    <!-- Links -->
+    <h6 class="text-uppercase fw-bold">Contacto</h6>
+        <p><i class="fas fa-home mr-3"></i> Yerba Buena, Tucuman, AR</p>
+        <p><i class="fas fa-home mr-3 pp"></i> Torneofutbol@gmail.com</p>
+        <p><i class="fas fa-home mr-3"></i> + 01 234 567 88 </p>
+        <p><i class="fas fa-home mr-3"></i> + 01 234 567 99</p>
+    </div>
+    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+    <!-- Links -->
+    <h6 class="text-uppercase fw-bold">Redes</h6>
+        <div class="d-flex flex-column footer__indice">
             <img class="footer__logos" src="../imagenes/facebook.png" alt="imagen-facebook">
             <img class="footer__logos" src="../imagenes/instagram.png" alt="imagen-instagram">
             <img class="footer__logos" src="../imagenes/gorjeo.png" alt="imagen-twitter">
         </div>
-        <span class="footer__derechos">LOS DERECHOS DE ESTE SITIO SON RESERVADOS </span>
+    <!-- Grid column -->
+    </div>
+    <!-- Grid row -->
+    </div>
+    </section>
     </footer>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
