--- a/paginas/quienes-somos.html
+++ b/paginas/quienes-somos.html
@@ -50,7 +50,7 @@
         <section>
             <h1 class="main__titulo--somos"> ¿QUIENES SOMOS?</h1>
             <h2 class="main__subti--quienes"> Somos un grupo de profesores, apasionados por el deporte que desde 2016 organizamos en Tucuman el torneo "Liga Infantil de Futbol" y desde el año 2019 lanzamos la competencia nacional. Presentaremos ahora su tercera edicion </h2>
-            <h1 class="main__titulo--somos"> ¿QUE QUEREMOS?</h1>
+            <h2 class="main__titulo--somos"> ¿QUE QUEREMOS?</h2>
             <h2 class="main__titulo--rojo"> Tenemos el proposito de seguir desarrollando la competencia sana de nuestro deporte, en un ambiente de amistad, disfrute y respeto, deseando que sea una gran Fiesta del Futbol Infantil en nuestra provincia; por este motivo queremos invitarlos a su institucion a participar de la 3era edicion de este torneo. </h2>
         </section>
         <section class="main__quienes-somos">
@@ -62,22 +62,45 @@
         </section>
     </main>
 <!-- pie de pagina -->
-    <footer>
-        <div>
-            <ul class="footer__indice">
-                <li class="footer__item"> <a href="../index.html">INICIO</a></li>
-                <li class="footer__item"> <a href="../paginas/quienes-somos.html">QUIENES SOMOS</a></li>
-                <li class="footer__item"> <a href="../paginas/galeria.html">GALERIA</a></li>
-                <li class="footer__item"> <a href="../paginas/formato.html">FORMATO</a></li>
-                <li class="footer__item"> <a href="../paginas/contacto.html">CONTACTO</a></li>
-            </ul>
-        </div>
-        <div class="footer__redes">
+<footer class=" text-lg-center text-white texto pt-0" style="background-color: #1c2331">
+    <section class="">
+    <div class="container text-center text-md-start">
+    <div class="row d-flex justify-content-center">
+    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+    <h6 class="text-uppercase fw-bold">Paginas</h6>
+        <p>
+            <a href="../index.html" class="text-white">Inicio</a>
+        </p>
+        <p>
+            <a href="../paginas/quienes-somos.html" class="text-white">Quienes Somos</a>
+        </p>
+        <p>
+            <a href="../paginas/galeria.html" class="text-white">Galeria</a>
+        </p>
+        <p>
+            <a href="../paginas/formato.html" class="text-white">Formato</a>
+        </p>
+        <p>
+            <a href="../paginas/contacto.html" class="text-white">Contacto</a>
+        </p>
+    </div>
+    <div class="col-md-2 col-md-4 col-xl-2 mx-auto mt-3">
+    <h6 class="text-uppercase fw-bold">Contacto</h6>
+        <p><i class="fas fa-home mr-3"></i> Yerba Buena, Tucuman, AR</p>
+        <p><i class="fas fa-home mr-3 pp"></i> Torneofutbol@gmail.com</p>
+        <p><i class="fas fa-home mr-3"></i> + 01 234 567 88 </p>
+        <p><i class="fas fa-home mr-3"></i> + 01 234 567 99</p>
+    </div>
+    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+    <h6 class="text-uppercase fw-bold">Redes</h6>
+        <div class="d-flex flex-column footer__indice">
             <img class="footer__logos" src="../imagenes/facebook.png" alt="imagen-facebook">
             <img class="footer__logos" src="../imagenes/instagram.png" alt="imagen-instagram">
             <img class="footer__logos" src="../imagenes/gorjeo.png" alt="imagen-twitter">
         </div>
-        <span class="footer__derechos">LOS DERECHOS DE ESTE SITIO SON RESERVADOS </span>
+    </div>
+    </div>
+    </section>
     </footer>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
