borrado de clases

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -84,16 +84,11 @@
 <!-- pie de pagina -->
     <footer
     class=" text-lg-center text-white texto pt-0"
-    style="background-color: #1c2331"
-    >
-    <!-- Section: Social media -->
-    <!-- Section: Links  -->
+    style="background-color: #1c2331">
     <section class="">
     <div class="container text-center text-md-start">
-    <!-- Grid row -->
     <div class="row d-flex justify-content-center">
     <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-    <!-- Links -->
     <h6 class="text-uppercase fw-bold">Paginas</h6>
         <p>
             <a href="../index.html" class="text-white">Inicio</a>
@@ -111,11 +106,7 @@
             <a href="../paginas/contacto.html" class="text-white">Contacto</a>
         </p>
     </div>
-    <!-- Grid column -->
-
-    <!-- Grid column -->
     <div class="col-md-2 col-md-4 col-xl-2 mx-auto mt-3">
-    <!-- Links -->
     <h6 class="text-uppercase fw-bold">Contacto</h6>
         <p><i class="fas fa-home mr-3"></i> Yerba Buena, Tucuman, AR</p>
         <p><i class="fas fa-home mr-3 pp"></i> Torneofutbol@gmail.com</p>
@@ -123,16 +114,13 @@
         <p><i class="fas fa-home mr-3"></i> + 01 234 567 99</p>
     </div>
     <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-    <!-- Links -->
     <h6 class="text-uppercase fw-bold">Redes</h6>
         <div class="d-flex flex-column footer__indice">
             <img class="footer__logos" src="../imagenes/facebook.png" alt="imagen-facebook">
             <img class="footer__logos" src="../imagenes/instagram.png" alt="imagen-instagram">
             <img class="footer__logos" src="../imagenes/gorjeo.png" alt="imagen-twitter">
         </div>
-    <!-- Grid column -->
     </div>
-    <!-- Grid row -->
     </div>
     </section>
     </footer>
