agrego nesting y variables

--- a/index.html
+++ b/index.html
@@ -28,27 +28,27 @@
                 </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mb- mb-lg-0 mx-auto">
-                <li class="nav-item">
-                    <a class="header__item ala nav" href="#">Inicio</a>
+                <li class="header__item">
+                    <a class="header__item header__ala header__nav" href="#">Inicio</a>
                 </li>
-                <li class="nav-item">
-                    <a class="header__item ala " href="paginas/quienes-somos.html">Quienes Somos</a>
+                <li class="header__item">
+                    <a class="header__item header__ala " href="paginas/quienes-somos.html">Quienes Somos</a>
                 </li>
-                <li class="nav-item">
-                    <a class="header__item ala " href="paginas/galeria.html">Galeria</a>
+                <li class="header__item">
+                    <a class="header__item header__ala " href="paginas/galeria.html">Galeria</a>
                 </li>
-                <li class="nav-item">
-                    <a class="header__item ala " href="paginas/formato.html">Formato</a>
+                <li class="header__item">
+                    <a class="header__item header__ala " href="paginas/formato.html">Formato</a>
                 </li>
-                <li class="nav-item">
-                    <a class="header__item ala " href="paginas/contacto.html">Contacto</a>
+                <li class="header__item">
+                    <a class="header__item header__ala " href="paginas/contacto.html">Contacto</a>
                 </li>
         </nav>
 
     </header>
 <!-- cuerpo de la pagina -->
     <main>
-        <h1 class="main__titulo--inicio"> Torneo Nacional De Futbol Infantil</h1>
+        <h1 class="main__futbol"> Torneo Nacional De Futbol Infantil</h1>
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -58,16 +58,16 @@
             </div>
             <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="imagenes/fondo.png" class="pelota__futbol" alt="...">
+                <img src="imagenes/fondo.png" class="main__futbol-portada" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="imagenes/atletico.png" class="pelota__futbol" alt="...">
+                <img src="imagenes/atletico.png" class="main__futbol-portada" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="imagenes/valladares-galeria.png" class="pelota__futbol" alt="...">
+                <img src="imagenes/valladares-galeria.png" class="main__futbol-portada" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="imagenes/quara.png" class="pelota__futbol" alt="...">
+                <img src="imagenes/quara.png" class="main__futbol-portada" alt="...">
             </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -82,7 +82,7 @@
     </main>
 <!-- pie de pagina -->
     <footer
-    class=" text-lg-center text-white texto pt-0"
+    class=" text-lg-center text-white footer__texto pt-0"
     style="background-color: #1c2331">
     <section class="">
     <div class="container text-center text-md-start">
