--- a/paginas/formato.html
+++ b/paginas/formato.html
@@ -28,20 +28,20 @@
                 </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mb- mb-lg-0 mx-auto">
-                <li class="nav-item">
-                    <a class="header__item ala nav" href="../index.html">Inicio</a>
+                <li class="header__item">
+                    <a class="header__item header__ala header__nav" href="../index.html">Inicio</a>
                 </li>
-                <li class="nav-item">
-                    <a class="header__item ala " href="../paginas/quienes-somos.html">Quienes Somos</a>
+                <li class="header__item">
+                    <a class="header__item header__ala " href="../paginas/quienes-somos.html">Quienes Somos</a>
                 </li>
-                <li class="nav-item">
-                    <a class="header__item ala " href="../paginas/galeria.html">Galeria</a>
+                <li class="header__item">
+                    <a class="header__item header__ala " href="../paginas/galeria.html">Galeria</a>
                 </li>
-                <li class="nav-item">
-                    <a class="header__item ala " href="../paginas/formato.html">Formato</a>
+                <li class="header__item">
+                    <a class="header__item header__ala " href="../paginas/formato.html">Formato</a>
                 </li>
-                <li class="nav-item">
-                    <a class="header__item ala " href="../paginas/contacto.html">Contacto</a>
+                <li class="header__item">
+                    <a class="header__item header__ala " href="../paginas/contacto.html">Contacto</a>
                 </li>
         </nav>
     </header>
@@ -57,12 +57,12 @@
             </ul>
         </section>
         <section>
-            <h1 class="main__categorias"> FORMATO DE JUEGO </h1>
+            <h2 class="main__categorias"> FORMATO DE JUEGO </h2>
             <p class="main__categorias--texto"> Sera el mismo para todas las categorias.Dos zonas de 4 equipos. Etapa Clasificatoria jugaran tres partidos, clasificando los 2 mejores de zona a semifinal de copa de oro, y los ultimos equipos de cada zona pasaran a semifinal de copa de plata. Todos los equipos juegan 5 partidos. Estara en juego en cada una de las divisiones la copa Fair Play y el trofeo al goleador por cada categoria. Cualquier institucion, escuela de futbol, club, entidades federadas o no federadas pueden participar con la cantidad de equipos que lo deseen, sin tener la necesidad de hacerlo con todas las divisiones oficiales del torneo.</p>
         </section>
     </main>
 <!-- pie de pagina -->
-    <footer class=" text-lg-center text-white texto pt-0" style="background-color: #1c2331">
+    <footer class=" text-lg-center text-white footer__texto pt-0" style="background-color: #1c2331">
     <section class="">
     <div class="container text-center text-md-start">
     <div class="row d-flex justify-content-center">
