--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -28,20 +28,20 @@
                 </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mb- mb-lg-0 mx-auto">
-                <li class="nav-item">
-                    <a class="header__item ala nav" href="../index.html">Inicio</a>
+                <li class="header__item">
+                    <a class="header__item header__ala header__nav" href="../index.html">Inicio</a>
                 </li>
-                <li class="nav-item">
-                    <a class="header__item ala " href="../paginas/quienes-somos.html">Quienes Somos</a>
+                <li class="header__item">
+                    <a class="header__item header__ala " href="../paginas/quienes-somos.html">Quienes Somos</a>
                 </li>
-                <li class="nav-item">
-                    <a class="header__item ala " href="../paginas/galeria.html">Galeria</a>
+                <li class="header__item">
+                    <a class="header__item header__ala " href="../paginas/galeria.html">Galeria</a>
                 </li>
-                <li class="nav-item">
-                    <a class="header__item ala " href="../paginas/formato.html">Formato</a>
+                <li class="header__item">
+                    <a class="header__item header__ala " href="../paginas/formato.html">Formato</a>
                 </li>
-                <li class="nav-item">
-                    <a class="header__item ala " href="../paginas/contacto.html">Contacto</a>
+                <li class="header__item">
+                    <a class="header__item header__ala " href="../paginas/contacto.html">Contacto</a>
                 </li>
         </nav>
     </header>
@@ -56,7 +56,7 @@
         
     </main>
 <!-- pie de pagina -->
-<footer class=" text-lg-center text-white texto pt-0" style="background-color: #1c2331">
+<footer class=" text-lg-center text-white footer__texto pt-0" style="background-color: #1c2331">
     <section class="">
     <div class="container text-center text-md-start">
     <div class="row d-flex justify-content-center">
