--- a/paginas/quienes-somos.html
+++ b/paginas/quienes-somos.html
@@ -28,41 +28,41 @@
                 </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mb- mb-lg-0 mx-auto">
-                <li class="nav-item">
-                    <a class="header__item ala nav" href="../index.html">Inicio</a>
+                <li class="header__item">
+                    <a class="header__item header__ala header__nav" href="../index.html">Inicio</a>
                 </li>
-                <li class="nav-item">
-                    <a class="header__item ala " href="../paginas/quienes-somos.html">Quienes Somos</a>
+                <li class="header__item">
+                    <a class="header__item header__ala " href="../paginas/quienes-somos.html">Quienes Somos</a>
                 </li>
-                <li class="nav-item">
-                    <a class="header__item ala " href="../paginas/galeria.html">Galeria</a>
+                <li class="header__item">
+                    <a class="header__item header__ala " href="../paginas/galeria.html">Galeria</a>
                 </li>
-                <li class="nav-item">
-                    <a class="header__item ala " href="../paginas/formato.html">Formato</a>
+                <li class="header__item">
+                    <a class="header__item header__ala " href="../paginas/formato.html">Formato</a>
                 </li>
-                <li class="nav-item">
-                    <a class="header__item ala " href="../paginas/contacto.html">Contacto</a>
+                <li class="header__item">
+                    <a class="header__item header__ala " href="../paginas/contacto.html">Contacto</a>
                 </li>
         </nav>
     </header>
 <!-- cuerpo de la pagina -->
     <main>
         <section>
-            <h1 class="main__titulo--somos"> ¿QUIENES SOMOS?</h1>
-            <h2 class="main__subti--quienes"> Somos un grupo de profesores, apasionados por el deporte que desde 2016 organizamos en Tucuman el torneo "Liga Infantil de Futbol" y desde el año 2019 lanzamos la competencia nacional. Presentaremos ahora su tercera edicion </h2>
-            <h2 class="main__titulo--somos"> ¿QUE QUEREMOS?</h2>
-            <h2 class="main__titulo--rojo"> Tenemos el proposito de seguir desarrollando la competencia sana de nuestro deporte, en un ambiente de amistad, disfrute y respeto, deseando que sea una gran Fiesta del Futbol Infantil en nuestra provincia; por este motivo queremos invitarlos a su institucion a participar de la 3era edicion de este torneo. </h2>
+            <h1 class="main__somos"> ¿QUIENES SOMOS?</h1>
+            <h2 class="main__rojo"> Somos un grupo de profesores, apasionados por el deporte que desde 2016 organizamos en Tucuman el torneo "Liga Infantil de Futbol" y desde el año 2019 lanzamos la competencia nacional. Presentaremos ahora su tercera edicion </h2>
+            <h2 class="main__somos"> ¿QUE QUEREMOS?</h2>
+            <h2 class="main__rojo"> Tenemos el proposito de seguir desarrollando la competencia sana de nuestro deporte, en un ambiente de amistad, disfrute y respeto, deseando que sea una gran Fiesta del Futbol Infantil en nuestra provincia; por este motivo queremos invitarlos a su institucion a participar de la 3era edicion de este torneo. </h2>
         </section>
-        <section class="main__quienes-somos">
-            <img class="quienes__somos--galeria" src="../imagenes/escudo1.jpeg">
-            <img class="quienes__somos--galeria" src="../imagenes/escudo2.jpeg">
-            <img class="quienes__somos--galeria" src="../imagenes/escudo3.jpeg">
-            <img class="quienes__somos--galeria" src="../imagenes/escudo4.jpeg">
-            <img class="quienes__somos--galeria" src="../imagenes/escudo5.jpg">
+        <section class="main">
+            <img class="main__galeria" src="../imagenes/escudo1.jpeg">
+            <img class="main__galeria" src="../imagenes/escudo2.jpeg">
+            <img class="main__galeria" src="../imagenes/escudo3.jpeg">
+            <img class="main__galeria" src="../imagenes/escudo4.jpeg">
+            <img class="main__galeria" src="../imagenes/escudo5.jpg">
         </section>
     </main>
 <!-- pie de pagina -->
-<footer class=" text-lg-center text-white texto pt-0" style="background-color: #1c2331">
+<footer class=" text-lg-center text-white footer__texto pt-0" style="background-color: #1c2331">
     <section class="">
     <div class="container text-center text-md-start">
     <div class="row d-flex justify-content-center">
