--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -28,62 +28,62 @@
                 </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mb- mb-lg-0 mx-auto">
-                <li class="nav-item">
-                    <a class="header__item ala nav" href="../index.html">Inicio</a>
+                <li class="header__item">
+                    <a class="header__item header__ala header__nav" href="../index.html">Inicio</a>
                 </li>
-                <li class="nav-item">
-                    <a class="header__item ala " href="../paginas/quienes-somos.html">Quienes Somos</a>
+                <li class="header__item">
+                    <a class="header__item header__ala " href="../paginas/quienes-somos.html">Quienes Somos</a>
                 </li>
-                <li class="nav-item">
-                    <a class="header__item ala " href="../paginas/galeria.html">Galeria</a>
+                <li class="header__item">
+                    <a class="header__item header__ala " href="../paginas/galeria.html">Galeria</a>
                 </li>
-                <li class="nav-item">
-                    <a class="header__item ala " href="../paginas/formato.html">Formato</a>
+                <li class="header__item">
+                    <a class="header__item header__ala " href="../paginas/formato.html">Formato</a>
                 </li>
-                <li class="nav-item">
-                    <a class="header__item ala " href="../paginas/contacto.html">Contacto</a>
+                <li class="header__item">
+                    <a class="header__item header__ala " href="../paginas/contacto.html">Contacto</a>
                 </li>
         </nav>
     </header>
 <!-- cuerpo de la pagina -->
     <main >
-        <section class="formulario__uno">
+        <section class="formulario">
             <article>
                 <div>
                     <h1 class="formulario__texto"> Contactanos</h1>
-                    <div class="mb-3">
+                    <div class="formulario-3">
                         <label for="exampleFormControlInput1" class="form-label">Nombre y Apellido</label>
                         <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
                     </div>
-                    <div class="mb-3">
+                    <div class="formulario-3">
                         <label for="exampleFormControlInput1" class="form-label">Apellido</label>
                         <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
                     </div>
-                    <div class="mb-3">
+                    <div class="formulario-3">
                         <label for="exampleFormControlInput1" class="form-label">Email</label>
                         <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
                     </div>
-                    <div class="mb-3">
+                    <div class="formulario-3">
                         <label for="exampleFormControlInput1" class="form-label">Telefono</label>
                         <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
                     </div>
-                    <div class="mb-3">
+                    <div class="formulario-3">
                         <label for="exampleFormControlTextarea1" class="form-label"></label>
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Escribi aqui tu comentario"></textarea>
                     </div>
                     <div class="d-grid justify-content-center"  >
-                        <button type="button" class="btn btn-outline-success">Enviar</button>
+                        <button type="button" class="btn main__boton">Enviar</button>
                     </div>
                 </div>
             </article>
             <div class="formulario__imagen">
-                <img class="img__formulario" src="../imagenes/sven-kucinic-Z0KjmjxUsKs-unsplash.jpg" alt="imagen cef 18">
+                <img class="formulario__img" src="../imagenes/sven-kucinic-Z0KjmjxUsKs-unsplash.jpg" alt="imagen cef 18">
             </div>
         </section>
     </main>
 <!-- pie de pagina -->
     <footer
-    class=" text-lg-center text-white texto pt-0"
+    class=" text-lg-center text-white footer__texto pt-0"
     style="background-color: #1c2331">
     <section class="">
     <div class="container text-center text-md-start">
