--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -85,9 +85,9 @@
     <footer
     class=" text-lg-center text-white footer__texto pt-0"
     style="background-color: #1c2331">
-    <section class="">
+    <section>
     <div class="container text-center text-md-start">
-    <div class="row d-flex justify-content-center">
+    <div class="row d-flex justify-content-center m-0">
     <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
     <h6 class="text-uppercase fw-bold">Paginas</h6>
         <p>
