--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Liga de futbol, Futbol, Jugadores, Entrenadores, Profesores, Alumnos, Amigos, Ejercicio, Pelota, Equipos, Clubes">
+    <meta name="description" content="Liga de futbol de tucuman, yerba buena">
     <!-- logo -->
     <link rel="shortcut icon" href="imagenes/favicon.ico" type="image/x-icon">
 <!-- GOOGLE FONTS -->
@@ -11,7 +13,7 @@
     <enlace rel="preconectar" href="https://fonts.gstatic.com" crossorigin>
     <enlace href="https: //fonts.googleapis.com/css2? family= Tiro+Telugu & display=swap" rel="hoja de estilo">
 <!-- NOMBRE DE LA PAGINA -->
-    <title> LIGA DE FUTBOL</title>
+    <title> LIGA DE FUTBOL- Inicio</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 <!-- ETIQUETA CSS -->
@@ -58,16 +60,16 @@
             </div>
             <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="imagenes/fondo.png" class="main__futbol-portada" alt="...">
+                <img src="imagenes/fondo.jpg" class="main__futbol-portada" alt="pelota-de-futbol">
             </div>
             <div class="carousel-item">
-                <img src="imagenes/atletico.png" class="main__futbol-portada" alt="...">
+                <img src="imagenes/atletico.jpg" class="main__futbol-portada" alt="jugador-de-atletico">
             </div>
             <div class="carousel-item">
-                <img src="imagenes/valladares-galeria.png" class="main__futbol-portada" alt="...">
+                <img src="imagenes/valladares-galeria.jpg" class="main__futbol-portada" alt="jugador-de-valladares">
             </div>
             <div class="carousel-item">
-                <img src="imagenes/quara.png" class="main__futbol-portada" alt="...">
+                <img src="imagenes/quara.jpg" class="main__futbol-portada" alt="jugador-de-quara">
             </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
