--- a/paginas/formato.html
+++ b/paginas/formato.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Liga de Futbol, Formato de Juego, Futbol, Equipos, Categorias de equipos,">
+    <meta name="description" content="informacion del formato de juego y las categorias permitidas que pueden jugar">
     <!-- logo -->
     <link rel="shortcut icon" href="../imagenes/favicon.ico" type="image/x-icon">
 <!-- GOOGLE FONTS -->
@@ -11,7 +13,7 @@
     <enlace rel="preconectar" href="https://fonts.gstatic.com" crossorigin>
     <enlace href="https: //fonts.googleapis.com/css2? family= Tiro+Telugu & display=swap" rel="hoja de estilo">
 <!-- NOMBRE DE LA PAGINA -->
-    <title> LIGA DE FUTBOL</title>
+    <title> LIGA DE FUTBOL- Formato</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 <!-- ETIQUETA CSS -->
