--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Liga de Futbol, Galeria de Fotos, Niños, Chicos, Equipos de futbol, Futbol, Amigos, Fotos">
+    <meta name="description" content="galeria de fotos de algunos equipos que compiten en la liga de futbol">
     <!-- logo -->
     <link rel="shortcut icon" href="../imagenes/favicon.ico" type="image/x-icon">
 <!-- GOOGLE FONTS -->
@@ -11,7 +13,7 @@
     <enlace rel="preconectar" href="https://fonts.gstatic.com" crossorigin>
     <enlace href="https: //fonts.googleapis.com/css2? family= Tiro+Telugu & display=swap" rel="hoja de estilo">
 <!-- NOMBRE DE LA PAGINA -->
-    <title> LIGA DE FUTBOL</title>
+    <title> LIGA DE FUTBOL- Galeria</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 <!-- ETIQUETA CSS -->
@@ -46,12 +48,15 @@
         </nav>
     </header>
 <!-- cuerpo de la pagina -->
-    <main class="">
+    <main>
+        <section>
+            <h1 class="main__somos"> Galeria de fotos</h1>
+        </section>
         <section class="galeria__grid">
-                <div class="patadita"></div>
-                <div class="cef"></div>
-                <div class="patada-roja"></div>
-                <div class="yo-claudio"></div>
+            <div class="patadita"></div>
+            <div class="cef"></div>
+            <div class="patada-roja"></div>
+            <div class="yo-claudio"></div>
         </section>
         
     </main>
