--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
 <!-- encabezado de la pagina -->
     <header>
         <nav class="navbar navbar-expand-lg header">
-            <div class="container-fluid" >
+            <div class="container-fluid">
                 <a href="index.html"><img class="header__logo" src="imagenes/Soccer-Ball-PNG-Pic-Background.png"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+                
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mb- mb-lg-0 mx-auto">
                 <li class="header__item">
@@ -45,12 +46,14 @@
                 <li class="header__item">
                     <a class="header__item header__ala " href="paginas/contacto.html">Contacto</a>
                 </li>
+            </div>
+            </div>
         </nav>
 
     </header>
 <!-- cuerpo de la pagina -->
     <main>
-        <!-- <h1 class="main__futbol"> Torneo Nacional De Futbol Infantil</h1> -->
+        <h1 class="main__futbol"> Torneo Nacional De Futbol Infantil</h1>
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -83,9 +86,7 @@
             </div>
     </main>
 <!-- pie de pagina -->
-    <footer
-    class=" text-lg-center text-white footer__texto pt-0"
-    style="background-color: #1c2331">
+    <footer class=" text-lg-center text-white footer__texto pt-0" style="background-color: #1c2331">
     <section>
     <div class="container text-center text-md-start">
     <div class="row d-flex justify-content-center m-0">
@@ -121,6 +122,7 @@
             <img class="footer__logos" src="imagenes/instagram.png" alt="imagen-instagram">
             <img class="footer__logos" src="imagenes/gorjeo.png" alt="imagen-twitter">
         </div>
+    </div>
     </div>
     </div>
     </section>
