--- a/paginas/formato.html
+++ b/paginas/formato.html
@@ -45,6 +45,8 @@
                 <li class="header__item">
                     <a class="header__item header__ala " href="../paginas/contacto.html">Contacto</a>
                 </li>
+            </div>
+            </div>
         </nav>
     </header>
 <!-- cuerpo de la pagina -->
@@ -52,15 +54,19 @@
         <h1 class="main__categorias"> CATEGORIAS </h1> <!-- titulo -->
         <section>
             <ul class="main__categorias--listas"> <!-- lista desordenada -->
-                <li>A- Categoria 2014/15 - Futbol 6 -cuatro suplentes-</li>
-                <li>B- Categoria 2012/13 - Futbol 6 -cuatro suplentes-</li>
-                <li>C- Categoria 2010/11 - Futbol 8 -seis suplentes-</li>
-                <li>D- Categoria 2008/09 - Futbol 8 -seis suplentes-</li>
+                <li>A- Categoria 2014/15 - Futbol 6 - 4 suplentes</li>
+                <li>B- Categoria 2012/13 - Futbol 6 - 4 suplentes</li>
+                <li>C- Categoria 2010/11 - Futbol 8 - 6 suplentes</li>
+                <li>D- Categoria 2008/09 - Futbol 8 - 6 suplentes</li>
             </ul>
         </section>
         <section>
             <h2 class="main__categorias"> FORMATO DE JUEGO </h2>
             <p class="main__categorias--texto"> Sera el mismo para todas las categorias.Dos zonas de 4 equipos. Etapa Clasificatoria jugaran tres partidos, clasificando los 2 mejores de zona a semifinal de copa de oro, y los ultimos equipos de cada zona pasaran a semifinal de copa de plata. Todos los equipos juegan 5 partidos. Estara en juego en cada una de las divisiones la copa Fair Play y el trofeo al goleador por cada categoria. Cualquier institucion, escuela de futbol, club, entidades federadas o no federadas pueden participar con la cantidad de equipos que lo deseen, sin tener la necesidad de hacerlo con todas las divisiones oficiales del torneo.</p>
+        </section>
+        <section class="main__categorias--editor">
+            <iframe class="main__categorias--video" src="https://www.youtube.com/embed/lfs1_0eARmc"></iframe>
+            <iframe class="main__categorias--video" src="https://www.youtube.com/embed/fp_hivC15UI"></iframe>
         </section>
     </main>
 <!-- pie de pagina -->
@@ -100,6 +106,7 @@
             <img class="footer__logos" src="../imagenes/instagram.png" alt="imagen-instagram">
             <img class="footer__logos" src="../imagenes/gorjeo.png" alt="imagen-twitter">
         </div>
+    </div>
     </div>
     </div>
     </section>
