--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -45,6 +45,8 @@
                 <li class="header__item">
                     <a class="header__item header__ala " href="../paginas/contacto.html">Contacto</a>
                 </li>
+            </div>
+            </div>
         </nav>
     </header>
 <!-- cuerpo de la pagina -->
@@ -97,6 +99,7 @@
             <img class="footer__logos" src="../imagenes/instagram.png" alt="imagen-instagram">
             <img class="footer__logos" src="../imagenes/gorjeo.png" alt="imagen-twitter">
         </div>
+    </div>
     </div>
     </div>
     </section>
