--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -45,6 +45,8 @@
                 <li class="header__item">
                     <a class="header__item header__ala " href="../paginas/contacto.html">Contacto</a>
                 </li>
+            </div>
+            </div>
         </nav>
     </header>
 <!-- cuerpo de la pagina -->
@@ -73,8 +75,9 @@
                         <label for="exampleFormControlTextarea1" class="form-label"></label>
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Escribi aqui tu comentario"></textarea>
                     </div>
-                    <div class="d-grid justify-content-center"  >
+                    <div class="d-flex flex-row botonn justify-content-center">
                         <button type="button" class="btn main__boton">Enviar</button>
+                        <button type="button" class="btn main__boton">Borrar</button>
                     </div>
                 </div>
             </article>
@@ -122,6 +125,7 @@
             <img class="footer__logos" src="../imagenes/instagram.png" alt="imagen-instagram">
             <img class="footer__logos" src="../imagenes/gorjeo.png" alt="imagen-twitter">
         </div>
+    </div>
     </div>
     </div>
     </section>
